--- a/.env
+++ b/.env
@@ -25,7 +25,7 @@ APP_SECRET=50a5b93774862c7e4433c6df9aa9098c
 #
 # DATABASE_URL="sqlite:///%kernel.project_dir%/var/data_%kernel.environment%.db"
 # DATABASE_URL="mysql://app:!ChangeMe!@127.0.0.1:3306/app?serverVersion=8.0.32&charset=utf8mb4"
-DATABASE_URL="mysql://root:@127.0.0.1:3306/3A26?serverVersion=10.11"
+DATABASE_URL="mysql://root:@127.0.0.1:3306/3A26"
 #DATABASE_URL="postgresql://app:!ChangeMe!@127.0.0.1:5432/app?serverVersion=16&charset=utf8"
 ###< doctrine/doctrine-bundle ###
 
